js/js.translator/testData/incremental/invalidation/inlineFunctionAsParam/lib1/l1.3.kt
inline fun foo1() = 77
inline fun foo2() = "foo2 update"
inline fun foo3() = "foo3"
